change de package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "israel/clean-logs",
+  "name": "israelguido/clean-logs",
   "description": "Limpeza de logs das tabelas do Magento",
   "keywords": [ "israel", "clear", "clean", "logs"],
   "homepage": "https://israelguido.com.br",
