--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "~7.1.3|~7.2.0",
+    "php": "~7.1.3|~7.2.0"
   },
   "autoload": {
     "files": [ "registration.php" ],
