--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "type": "magento2-module",
   "version": "1.1.5",
+  "minimum-stability": "dev",
   "authors": [
     {
       "name": "Israel Guido",
