--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "type": "magento2-module",
   "version": "1.1.5",
-  "minimum-stability": "dev",
+  "minimum-stability": "master",
   "authors": [
     {
       "name": "Israel Guido",
@@ -14,7 +14,8 @@
     }
   ],
   "require": {
-    "php": "~7.1.3|~7.2.0"
+    "php": "~7.1.3|~7.2.0",
+    "israelguido/clean-logs": "master"
   },
   "autoload": {
     "files": [ "registration.php" ],
@@ -23,4 +24,3 @@
     }
   }
 }
-
