--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "require": {
     "php": "~7.1.3|~7.2.0",
-    "israelguido/clean-logs": "master"
+    "israelguido/clean-logs": "dev-master"
   },
   "autoload": {
     "files": [ "registration.php" ],
